<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/activities_mainactivity_search_default_text"
        android:icon="@mipmap/ic_action_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/action_play"
        android:icon="@mipmap/ic_video_play"
        android:title="@string/activities_mainactivity_toolbar_play"
        android:orderInCategory="0"
        app:showAsAction="always"/>

    <item android:id="@+id/action_pass_control"
        android:icon="@mipmap/ic_activity_main_pass_control"
        android:title="@string/activities_mainactivity_toolbar_pass_control"
        android:orderInCategory="1"
        app:showAsAction="always"/>
</menu>