<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dl_activity_users"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_activity_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_users_search"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/activities_usersactivity_user_search_default_text"/>

            <Button
                android:id="@+id/activity_users_send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activities_usersactivity_user_search_button"/>

            <Spinner
                android:id="@+id/activity_users_search_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/srl_activity_users"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_activity_users"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"/>

        </android.support.v4.widget.SwipeRefreshLayout>

        <Button
            android:id="@+id/activity_main_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activities_usersactivity_dialog_logout_yes" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/activities_usersactivity_nav_friends_title"
                android:textSize="28sp"
                android:paddingLeft="20dp"
                android:layout_weight="2"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/activity_users_nav_friends_sort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

         </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_nav_activity_users"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?android:windowBackground"
            android:scrollbars="vertical"
            android:layout_gravity="start"/>


    </LinearLayout>

</android.support.v4.widget.DrawerLayout>